# ConvexHull

./: CMakeLists.txt  README.md  convexhullwidget.cpp  convexhullwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
